Adds main CPP source file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,2 +1,6 @@
 cmake_minimum_required(VERSION 3.21)
 project(github_exploration_solution)
+
+
+add_executable(main)
+target_sources(main PRIVATE "src/main.cpp")
